프로젝트 개발/서비스 환경 수정

--- a/index.html
+++ b/index.html
@@ -372,17 +372,26 @@
 				                  	<br>
 				                  </P>
 					             <p>
-				                  	<strong>Development Environment</strong> <br>
+				                  	<strong>개발 환경</strong> <br>
 				                  	OS : Window10 <br>
-				                  	Language / Library : Java(JavaSE-17) <br>
+				                  	Language : Java(JavaSE-17) <br>
+				                  	Library : <br>
 				                  	Tool : Spring Tool Suite4, HeidiSql<br>
 				                  	Database : MariaDB(10.5.19) <br>
 				                  	Server : Apache Tomcat(9.0.75)
 				                  </p>
+					             <p>
+				                  	<strong>서비스 환경</strong> <br>
+				                  	OS: Ubuntu (18.04.6)<br>
+									Platform : AWS Lightsail<br>
+									Database : MariaDB(18.04.1)<br>
+									Language : Java(17.0.7)
+				                  </p>
 				                  <p>
-					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/14pBo1mVq1itf9k0ICLOCON31LCX-n6IWnCRpT895wnY/edit?usp=sharing')">요구사항 정의서</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('images/Final_WBS.pdf')">WBS</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('images/fianl_require.pdf')">요구사항 정의서</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
-				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.png')">ERD</button>
+				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.jpg')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/yeye-team/yeyebooks-groupware')">Github</button>
 					              	<button type="button" class="btn btn-primary" onclick="window.open('images/final-main.jpg')">AWS</button>
 				                  </p>
@@ -458,12 +467,20 @@
 									</ul>
 				                  </p>
 				                  <p>
-				                  	<strong>Development Environment</strong> <br>
+				                  	<strong>개발 환경</strong> <br>
 				                  	OS : Window10 <br>
-				                  	Language / Library : Java(JavaSE-17), HTML5, CSS3, jQuery(3.6.0) <br>
+				                  	Language : Java(JavaSE-17), HTML5, CSS3, JavaScript<br>
+				                  	Library : Servlet(4.0), jQuery(3.6.0) <br>
 				                  	Tool : Eclipse IDE, HeidiSQL <br>
 				                  	Database : MariaDB(10.5.19) <br>
 				                  	Server : Apache Tomcat(9.0.75) 
+				                  </p>
+				                  <p>
+				                  	<strong>서비스 환경</strong> <br>
+									OS: Ubuntu (18.04)<br>
+									Platform : AWS Lightsail<br>
+									Database : MariaDB(10.1.48)<br>
+									Language : Java(17.0.7)
 				                  </p>
 				                  <p>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('images/semi-ERD.png')">ERD</button>
@@ -527,12 +544,20 @@
 									</ul>
 				                  </p>
 				                  <p>
-				                  	<strong>Development Environment</strong> <br>
+				                  	<strong>개발환경</strong> <br>
 				                  	OS : Window10 <br>
-				                  	Language / Library : Java(JavaSE-17), JSTL, HTML5, CSS3, BootStrap5<br>
+				                  	Language : Java(JavaSE-17), HTML5, CSS3, JavaScript
+				                  	Library : JSTL, Servlet(4.0), BootStrap5<br>
 				                  	Tool : Eclipse IDE, HeidiSQL<br>
 				                  	Database : MariaDB(10.5.19) <br>
 				                  	Server : Apache Tomcat(9.0.75)
+				                  </p>
+				                  <p>
+				                  	<strong>서비스 환경</strong> <br>
+									OS: Ubuntu (18.04)<br>
+									Platform : AWS Lightsail<br>
+									Database : MariaDB(10.1.48)<br>
+									Language : Java(17.0.7)
 				                  </p>
 				                  <p>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('images/cashbook-ERD.png')">ERD</button>
@@ -585,13 +610,21 @@
 									  <li>기초적인 CRUD의 구조에 대해 알게 되었습니다.</li>
 									</ul>
 				                  </p>
-				                  <p>
-				                  	<strong>Development Environment</strong> <br>
+				                   <p>
+				                  	<strong>개발환경</strong> <br>
 				                  	OS : Window10 <br>
-				                  	Language / Library : Java(JavaSE-17), HTML5, CSS3, BootStrap5<br>
+				                  	Language : Java(JavaSE-17), HTML5, CSS3
+				                  	Library : Servlet(4.0), BootStrap5<br>
 				                  	Tool : Eclipse IDE, HeidiSQL<br>
 				                  	Database : MariaDB(10.5.19) <br>
 				                  	Server : Apache Tomcat(9.0.75)
+				                  </p>
+				                  <p>
+				                  	<strong>서비스 환경</strong> <br>
+									OS: Ubuntu (18.04)<br>
+									Platform : AWS Lightsail<br>
+									Database : MariaDB(10.1.48)<br>
+									Language : Java(17.0.7)
 				                  </p>
 				                  <p>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('images/userboard-ERD.png')">ERD</button>
