파이널 프로젝트 업데이트

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 				                 	요구사항 정의서부터 화면 설계서, DB설계와 ERD, 기능 구현을 통해<br>
 				                 	개발 프로젝트의 전반적인 과정을 경험 중에 있습니다.<br>
 				                 	<br>
-				                 	23년 08월 16일 현재 기능 분배를 완료하였습니다.<br>
+				                 	23년 08월 16일 현재 구현 파트 분배를 완료, 개발 진행 중입니다.<br><br>
 				                 	<strong>담당 기능</strong> :<br>
 				                 	사용자 : (공지/전체/부서) 게시판 별 전체 기능 / (회사/부서/개인) 일정 전체 기능
 				                  	<br>
@@ -388,7 +388,7 @@
 									Language : Java(17.0.7)
 				                  </p>
 				                  <p>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/Final_WBS.pdf')">WBS</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/13_THsOLCtRFIR4erbdd-rjiuE2AlNCpfGUyEBxFeT3s/edit?usp=sharing')">WBS</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('images/fianl_require.pdf')">요구사항 정의서</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
 				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.jpg')">ERD</button>
