파이널 프로젝트 내용 추가

--- a/index.html
+++ b/index.html
@@ -361,15 +361,20 @@
 				                  	<!-- <span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span> -->
 				                  </p>
 				                  <P>
-				                 	전자 결재 시스템(그룹웨어)를 구현 중 입니다.<br>
+				                 	스프링 프레임워크를 활용한 전자 결재 시스템(그룹웨어)를 구현 중 입니다.<br>
 				                 	요구사항 정의서부터 화면 설계서, DB설계와 ERD, 기능 구현을 통해<br>
 				                 	개발 프로젝트의 전반적인 과정을 경험 중에 있습니다.<br>
 				                 	<br>
-				                 	23년 08월 16일 현재 구현 파트 분배를 완료, 개발 진행 중입니다.<br><br>
+				                 	23년 09월 05일 기능 개발 및 개별 테스트를 진행하고 있습니다.<br><br>
 				                 	<strong>담당 기능</strong> :<br>
-				                 	사용자 : (공지/전체/부서) 게시판 별 전체 기능 / (회사/부서/개인) 일정 전체 기능
+				                 	사용자 : <br>
+				                 	&nbsp;&nbsp;&nbsp;- (공지/전체/부서) 게시판 별 전체 기능<br>
+				                 	&nbsp;&nbsp;&nbsp;- (회사/부서/개인) 일정 전체 기능<br>
+				                 	&nbsp;&nbsp;&nbsp;- 휴가 상신 작성 및 내역 조회
 				                  	<br>
-				                 	관리자 : 게시판 관리 / 회사 일정 관리
+				                 	관리자 : <br>
+				                 	&nbsp;&nbsp;&nbsp;- 각 게시판 관리<br>
+				                 	&nbsp;&nbsp;&nbsp;- 사내 일정 관리
 				                  	<br>
 				                  </P>
 					             <p>
@@ -389,8 +394,8 @@
 									Language : Java(17.0.7)
 				                  </p>
 				                  <p>
-					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/13_THsOLCtRFIR4erbdd-rjiuE2AlNCpfGUyEBxFeT3s/edit?usp=sharing')">WBS</button>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/fianl_require.pdf')">요구사항 정의서</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/1Q3jRDSY5vn9lUfzBxU7tbwqjtNA6-CCuCWJatkYo3mY/edit?usp=sharing')">WBS</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/1DIu11B3zkVxal-LcV9yMXO89fjhn6X9T5hgcQhdrJGY/edit?usp=sharing')">요구사항 정의서</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
 				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.jpg')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/yeye-team/yeyebooks-groupware')">Github</button>
