--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
 									<img src="images/logo/java.png" style="height: 23px; width:21px;"> Java<br>
 									<img src="images/logo/spring.png" style="height: 23px;"> Spring<br>
 									<img src="images/logo/jsp.png" style="height: 23px;"> JSP/JSTL<br>
-									<img src="images/logo/mybatis.png" style="height: 23px;"> MyBatis<br>
+									<!-- <img src="images/logo/mybatis.png" style="height: 23px;"> MyBatis<br> -->
+									&nbsp;<br>
 									&nbsp;<br>
 									</p>
 								</div>
@@ -186,7 +187,7 @@
 									<img src="images/logo/html.png" style="height: 23px;"> HTML5<br>
 									<img src="images/logo/css.png" style="height: 23px;"> CSS<br>
 									<img src="images/logo/js.png" style="height: 23px;"> JS/Jquery<br> 
-									<img src="images/logo/boot.png" style="height: 18px;"> BootStrap<br>
+									<img src="images/logo/boot.png" style="height: 18px;"> BootStrap5<br>
 									&nbsp;<br>
 									</p>
 								</div>
@@ -196,12 +197,12 @@
 						<div class="col-md-3 text-center animate-box">
 							<div class="services color-4">
 								<div class="desc">
-									<h3>TOOL</h3>
+									<h3>TOOL/ETC</h3>
 									<p class="text-left">
 									<img src="images/logo/eclipse.jpg" style="height: 23px; width: 22px;"> Eclipse<br>
+									<img src="images/logo/sts4.png" style="height: 23px;"> STS4<br>
 									<img src="images/logo/HeidiSQL.png" style="height: 23px;"> HeidiSQL<br>
 									<img src="images/logo/github.png" style="height: 23px;"> Github<br>
-									<img src="images/logo/sts4.png" style="height: 23px;"> STS4<br>
 									<img src="images/logo/aws.jpg" style="height: 20px;"> AWS<br>
 									</p>
 								</div>
