파이널 프로젝트 ERD 업데이트

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/1Q3jRDSY5vn9lUfzBxU7tbwqjtNA6-CCuCWJatkYo3mY/edit?usp=sharing')">WBS</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/1DIu11B3zkVxal-LcV9yMXO89fjhn6X9T5hgcQhdrJGY/edit?usp=sharing')">요구사항 정의서</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
-				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.jpg')">ERD</button>
+				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.png')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/yeye-team/yeyebooks-groupware')">Github</button>
 					              	<button type="button" class="btn btn-primary" onclick="window.open('images/final-main.jpg')">AWS</button>
 				                  </p>
