--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 				                 	요구사항 정의서부터 화면 설계서, DB설계와 ERD, 기능 구현을 통해<br>
 				                 	개발 프로젝트의 전반적인 과정을 경험 중에 있습니다.<br>
 				                 	<br>
-				                 	23년 09월 05일 기능 개발 및 개별 테스트를 진행하고 있습니다.<br><br>
+				                 	23년 09월 12일 현재 통합테스트 및 배포 준비 중에 있습니다.<br><br>
 				                 	<strong>담당 기능</strong> :<br>
 				                 	사용자 : <br>
 				                 	&nbsp;&nbsp;&nbsp;- (공지/전체/부서) 게시판 별 전체 기능<br>
