파이널 프로젝트 업데이트

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<meta name="author" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="favicon" href="./favicon.ico">
+	<link rel="icon" href="sanlee27.github.io/favicon.ico?v=2" />
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -353,40 +354,58 @@
 				               </div>
 
 				               <div class="timeline-label">
-				                  <h2>FINAL PROJECT(팀 프로젝트)<span> 2023.07.24 ~ 진행중 [개발인원: 4명]</span></h2>
+				                  <h2>FINAL PROJECT(팀 프로젝트)<span> 2023.07.24 ~ 2023.9.12 (8주) [개발인원: 4명]</span></h2>
 				                  <h2 style="color:#46AAFF;"><strong>업무지원 시스템 구축(SPRING BOOT) </strong></h2>
 				                  <p style="text-align:center;">
-				                  	<button type="button" class="btn btn-link" onclick="window.open('')">
+				                  	<button type="button" class="btn btn-link" onclick="window.open('http://sanlee.me/yeyebooks/')">
 				                  		<img src="images/final-main.jpg" style="width: 80%; height: 80%;">
 				                  	</button><br>
-				                  	<!-- <span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span> -->
+				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
 				                  </p>
 				                  <P>
-				                 	스프링 프레임워크를 활용한 전자 결재 시스템(그룹웨어)를 구현 중 입니다.<br>
-				                 	요구사항 정의서부터 화면 설계서, DB설계와 ERD, 기능 구현을 통해<br>
-				                 	개발 프로젝트의 전반적인 과정을 경험 중에 있습니다.<br>
+				                 	스프링 프레임워크를 활용한 전자 결재 시스템(그룹웨어)를 구현하였습니다.<br>
+				                 	요구사항 정의서부터 화면 설계서, DB설계와 ERD, 기능 구현 및 배포까지<br>
+				                 	개발 프로젝트의 전반적인 과정을 경험 하였습니다.<br>
 				                 	<br>
-				                 	23년 09월 12일 현재 통합테스트 및 배포 준비 중에 있습니다.<br><br>
+				                 	기업 내에서 이뤄지는 비즈니스 기능을 웹사이트에서 모두 처리할 수 있도록 합니다.<br>
+				                 	사용자에게 보다 나은 가시성과 사용성을 제공하고자 하였습니다.<br>
+				                 	<strong>전자결재가</strong> 주 기능이며 이외에도<br>
+				                 	사원 기능으로 일정관리, 시설 및 비품 예약, 게시판과 출퇴근 처리, 인사정보 조회를 제공하고 있습니다.<br>
+				                 	관리자 기능으로 사원통계 확인, 조직 및 구성원 관리, 회사일정 관리, 게시판 관리를 제공하고 있습니다.<br>
+				                 	<br>
+				                 	
 				                 	<strong>담당 기능</strong> :<br>
 				                 	사용자 : <br>
-				                 	&nbsp;&nbsp;&nbsp;- (공지/전체/부서) 게시판 별 전체 기능<br>
-				                 	&nbsp;&nbsp;&nbsp;- (회사/부서/개인) 일정 전체 기능<br>
-				                 	&nbsp;&nbsp;&nbsp;- 휴가 상신 작성 및 내역 조회
-				                  	<br>
+				                 	&nbsp;&nbsp;&nbsp;- (공지/전체/부서) 게시판 별 전 기능<br>
+				                 	&nbsp;&nbsp;&nbsp;- (회사/부서/개인) 일정 전 기능<br>
+				                 	&nbsp;&nbsp;&nbsp;- 휴가 상신 및 내역 조회
+				                  	<br><br>
 				                 	관리자 : <br>
 				                 	&nbsp;&nbsp;&nbsp;- 각 게시판 관리<br>
 				                 	&nbsp;&nbsp;&nbsp;- 사내 일정 관리
 				                  	<br>
 				                  </P>
+				                  <p>
+				                  	<strong>성장점</strong>
+				                  	<ul>
+									  <li>한 프로젝트의 계획수립부터 결과를 내기까지의 과정을 경험했습니다.</li>
+									  <li>Spring MVC 패턴을 활용하며 에러처리와 기능 구현의 용이성을 경험했습니다.</li>
+									  <li>디버깅을 하며 문제를 해결하는 과정에서 문제의 원인과 데이터 처리 과정을 확인하였습니다.</li>
+									  <li>
+									  프로젝트 중 발생한 개발 외적인 문제에서 우선순위와 중요도를 구분하여<br>
+									  프로젝트를 완수함으로써, 문제에 대한 판단과 대처 능력을 키울 수 있는 경험을 하였습니다.	
+									  </li>
+									</ul>
+				                  </p>
 					             <p>
 				                  	<strong>개발 환경</strong> <br>
 				                  	OS : Window10 <br>
-				                  	Language : Java(JavaSE-17) <br>
-				                  	Library : <br>
+				                  	Language : Java(JavaSE-17), HTML5, CSS3, JavaScript<br>
+				                  	Library : Servlet(4.0), jQuery(3.6.4), Full Calendar(5.11.5) <br>
 				                  	Tool : Spring Tool Suite4, HeidiSql<br>
 				                  	Database : MariaDB(10.5.19) <br>
 				                  	Server : Apache Tomcat(9.0.75)
-				                  </p>
+				                 </p>
 					             <p>
 				                  	<strong>서비스 환경</strong> <br>
 				                  	OS: Ubuntu (18.04.6)<br>
@@ -397,8 +416,10 @@
 				                  <p>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/1Q3jRDSY5vn9lUfzBxU7tbwqjtNA6-CCuCWJatkYo3mY/edit?usp=sharing')">WBS</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/1DIu11B3zkVxal-LcV9yMXO89fjhn6X9T5hgcQhdrJGY/edit?usp=sharing')">요구사항 정의서</button>
-					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('images/uiDefine.pdf')">화면 설계서</button>
+				                 	<button type="button" class="btn btn-link" onclick="window.open('images/table.pdf')">테이블 정의서</button>
 				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.png')">ERD</button>
+				                 	<button type="button" class="btn btn-link" onclick="window.open('images/ppt.pptx')">PPT</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/yeye-team/yeyebooks-groupware')">Github</button>
 					              	<button type="button" class="btn btn-primary" onclick="window.open('images/final-main.jpg')">AWS</button>
 				                  </p>
@@ -406,7 +427,7 @@
 				            </div>
 				         </article>
 					 
-					 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">	
 				            <div class="timeline-entry-inner">
 				               <div class="timeline-icon color-2">
 				                  <i class="icon-pen2"></i>
@@ -419,12 +440,6 @@
 				                 	 	<img src="images/semi-main.jpg" style="width: 80%; height: 80%">
 				                  	</button>
 				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
-				                  </p>
-				                  <p>
-				                  	<strong>Test Account</strong><br>
-				                  	사용자 : user1 / 1234<br>
-				                  	관리자 : admin1 / 1234
-									<br>
 				                  </p>
 				                  <p>
 				                  	<br>
