파이널 프로젝트 수정

--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
 				                  <h2>FINAL PROJECT(팀 프로젝트)<span> 2023.07.24 ~ 2023.9.12 (8주) [개발인원: 4명]</span></h2>
 				                  <h2 style="color:#46AAFF;"><strong>업무지원 시스템 구축(SPRING BOOT) </strong></h2>
 				                  <p style="text-align:center;">
-				                  	<button type="button" class="btn btn-link" onclick="">
+				                  	<button type="button" class="btn btn-link" onclick="window.open('http://sanlee.me/yeyebooks/')">
 				                  		<img src="images/final-main.jpg" style="width: 80%; height: 80%;">
 				                  	</button><br>
-				                  	<!-- <span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span> window.open('http://sanlee.me/yeyebooks/')-->
-				                  	<span style="font-size: 10pxl; color:#F65151;">23.9.15 오류 수정중입니다.</span>
+				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
+				                  	<!-- <span style="font-size: 10pxl; color:#F65151;">23.9.15 오류 수정중입니다.</span> -->
 				                  </p>
 				                  <P>
 				                 	스프링 프레임워크를 활용한 전자 결재 시스템(그룹웨어)를 구현하였습니다.<br>
@@ -422,7 +422,7 @@
 				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.png')">ERD</button>
 				                 	<button type="button" class="btn btn-link" onclick="window.open('images/ppt.ppsx')">PPT</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/yeye-team/yeyebooks-groupware')">Github</button>
-					              	<button type="button" class="btn btn-primary" onclick="window.open('images/final-main.jpg')">AWS</button>
+					              	<button type="button" class="btn btn-primary" onclick="window.open('http://sanlee.me/yeyebooks/')">AWS</button>
 				                  </p>
 				               </div>
 				            </div>
