--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
 							      				<li> 
 							      					<strong>5~6개월차</strong><br>
 							      					현재까지 배운 내용을 활용하여 진행하는 기업연계 파이널 프로젝트로,<br>
-													클라우드 활용 업무지원 시스템 구축 프로젝트를 진행 중에 있습니다.<br>
-													요구사항 수집부터, DB설계, 기능 구현 등을 진행 예정입니다. 
+													클라우드 활용 업무지원 시스템 구축 프로젝트를 진행 하였습니다.<br>
+													요구사항 수집부터, DB설계, 기능 구현 및 배포까지 전반적인 프로세스를 경험 하였습니다. 
 							      				</li><br> 
 							      				<li> 
 							      					<strong>이수하며</strong>
